# AgentSec

./: .gitignore  README.md  TESTING_GUIDE.md  example-report.html  pyproject.toml  test_multi_agent_demo.py  test_tool.py  vulnerability_detection_demo.py
agentsec/analyzers/: __init__.py  autogen.py  base.py  crewai.py  langgraph.py  n8n.py  openai_agents.py
agentsec/cli/: main.py
agentsec/data/: tool_database.json  vulnerabilities.json
agentsec/mappers/: __init__.py  vulnerability_mapper.py
agentsec/models/: __init__.py  graph.py
agentsec/report/: __init__.py  generator.py  graph_visualizer.py
agentsec/templates/: report.html
agentsec/utils/: __init__.py  ast_utils.py  file_utils.py
examples/: crewai_example.py  langgraph_example.py
test_multi_agent/: multi_agent_workflow.py
test_project/: vulnerable_agent.py
tests/: test_models.py  test_vulnerability_mapper.py
